hiding AORs from the main projects list and displaying whether the kickstarter task is supposed to be missing

--- a/client/review/projectslist/projectslist.html
+++ b/client/review/projectslist/projectslist.html
@@ -6,6 +6,7 @@
 <div class="active-project {{nokickstart}}">
           {{> project_item}}
 {{> openproject}}
+<p style="color: red;">missing kickstarter</p>
 
 </div> <!-- active project -->
       {{/each}}
