--- a/client/review/mits/mits.html
+++ b/client/review/mits/mits.html
@@ -3,11 +3,13 @@
 <h3>Most Important Tasks (MITs)</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closemitssection">+</div><p class="btn sorting_mits {{sorting_mits}}">Sort MITs</p>
 <div id="task_list" class="mit_task_list">
 {{#each mits}}
+{{#if aor}}
 {{#unless somedaymaybeproject}}
 {{#unless somedaymaybecontext}}
 {{> orgtask_todo_item}}
 {{/unless}}
 {{/unless}}
+{{/if}}
 {{/each}}
 </div>
 
