--- a/client/review/perspective/perspective.html
+++ b/client/review/perspective/perspective.html
@@ -12,7 +12,7 @@
 <ul style="clear: both;">
 {{#each aorprojects}}
 <li style="list-style-type: none;">
-<span style="clear: both; float: left;">{{description}}</span>
+<span style="clear: both; float: left;">{{description}} ({{project}})</span>
 
 <select style="clear: both; float: left;" class="aorselect" id="aorselect-{{_id}}">
 <option>Select One</option>
