--- a/client/review/perspective/horizoninfocus.html
+++ b/client/review/perspective/horizoninfocus.html
@@ -9,7 +9,7 @@
 <ul style="clear: both;">
 {{#each aorprojects}}
 <li style="list-style-type: none;">
-<span style="clear: both; float: left;">{{description}}</span>
+<span style="clear: both; float: left;">{{description}} ({{project}})</span>
 
 <select style="clear: both; float: left;" class="aorselect" id="aorselect-{{_id}}">
 <option>Select One</option>
