got rid of an error

--- a/client/main.html
+++ b/client/main.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1">
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={YOUR GOOGLE KEY}&sensor=false"></script>
   <script type="text/javascript">
-    google.maps.event.addDomListener(window, 'load', initialize);
+    google.maps.event.addDomListener(window, 'load');
   </script>
 </head>
 
