can set whether a task is an MIT when processing

--- a/client/review/process/processingdialog/processingdialog.html
+++ b/client/review/process/processingdialog/processingdialog.html
@@ -11,6 +11,7 @@
 
     <div class="modal-body">
 
+      <div class="btn btn-inverse {{mitornot}} mit">MIT</div>
       <div class="btn btn-primary trash">Trash/Done</div>
       <div class="btn btn-primary archive">Archive</div>
 {{#if projwithnolargeroutcome}}
