--- a/client/review/process/processingdialog/context_picker/context_picker.html
+++ b/client/review/process/processingdialog/context_picker/context_picker.html
@@ -1,7 +1,7 @@
 <template name="context_picker">
 <div id="#context-picker">
 <div class="form-group">
-  <input style="width: 456px;" class=".context-picker form-control typeahead span5" name="team" type="text"
+  <input style="width: 456px;" class="context-picker form-control typeahead span5" name="team" type="text"
        placeholder="{{context}}"
        autocomplete="off" spellcheck="off"
        data-source="contexts"/>
