--- a/client/review/process/processingdialog/project_picker/project_picker.html
+++ b/client/review/process/processingdialog/project_picker/project_picker.html
@@ -1,7 +1,7 @@
 <template name="project_picker">
 <div id="#project-picker">
 <div class="form-group">
-  <input style="width: 456px;" class=".project-picker form-control typeahead span5" name="team" type="text"
+  <input style="width: 456px;" class="project-picker form-control typeahead span5" name="team" type="text"
        placeholder="{{project}}"
        autocomplete="off" spellcheck="off"
        data-source="projects"/>
