get rid of focus button for context categories

--- a/client/review/contextcategories/contextcategories.html
+++ b/client/review/contextcategories/contextcategories.html
@@ -5,7 +5,7 @@
 <ul style="clear: both;">
 {{#each contextcategory}}
 <li style="list-style-type: none;">
-<h4>{{description}}</h4><span style="float: left; position: relative; margin-left: 20px; top: 10px;" class="contextcategoryfocus">focus</span><span style="float: left; position: relative; margin-left: 20px; top: 10px;" class="contextcategorytoback">back</span><span style="float: left; position: relative; margin-left: 20px; top: 10px;" class="contextcategorytofront">front</span>
+<h4>{{description}}</h4><span style="float: left; position: relative; margin-left: 20px; top: 10px;" class="contextcategorytoback">back</span><span style="float: left; position: relative; margin-left: 20px; top: 10px;" class="contextcategorytofront">front</span>
 
 <ul style="clear: both;">
 {{#each contextcategorycontexts}}
