organizing by context category

--- a/client/review/contextpicker/contextpicker.html
+++ b/client/review/contextpicker/contextpicker.html
@@ -2,6 +2,9 @@
 {{#unless fullmulticontext}}
 <h3>Contexts</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closenextactionssection">+</div>
 {{/unless}}
+{{#each contextcategories}}
+{{#if hascontexts}}
+<h5 class="clearfix">{{description}}</h5>
 <ul id="contextpicker">
 {{#each contexts}}
 {{#unless in_multicontext}}
@@ -16,6 +19,8 @@
 {{/unless}}
 {{/each}}
 </ul>
+{{/if}}
+{{/each}}
 
 <!-- load more -->
   {{#if Template.subscriptionsReady}}
