--- a/client/review/focuscontextpicker/focuscontextpicker.html
+++ b/client/review/focuscontextpicker/focuscontextpicker.html
@@ -2,6 +2,9 @@
 {{#unless fullfocusmulticontext}}
 <h3>Contexts in Progress</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closefocusnextactionssection">+</div>
 {{/unless}}
+{{#each contextcategories}}
+{{#if hascontexts}}
+<h5 class="clearfix">{{description}}</h5>
 <ul id="focuscontextpicker">
 {{#each contexts}}
 {{#unless in_focusmulticontext}}
@@ -9,6 +12,8 @@
 {{/unless}}
 {{/each}}
 </ul>
+{{/if}}
+{{/each}}
 
 <!-- load more -->
   {{#if Template.subscriptionsReady}}
