--- a/client/review/nextactions/wips/wips.html
+++ b/client/review/nextactions/wips/wips.html
@@ -7,6 +7,7 @@
 
 <p class="btn sorting_wips {{sorting_wips}}">Sort WIPs</p>
 
+{{> timeview}}
 <div id="task_list" class="wip_task_list">
 {{#each wips}}
 {{#if aor}}
