stub of timeview putting tasks into proper task rank according to duration

--- a/client/review/common/orgtask-todo-item/orgtask-todo-item.html
+++ b/client/review/common/orgtask-todo-item/orgtask-todo-item.html
@@ -43,6 +43,7 @@
     {{#if process}}
       <button type="button" style="float:right;" class="processing-button">process</button>
     {{/if}}
+{{> duration}}
 <p>{{rank}}</p>
       </li>
 </template>
