--- a/client/review/nextactions/wips/timeview/timeview.html
+++ b/client/review/nextactions/wips/timeview/timeview.html
@@ -5,7 +5,7 @@
     {{#each timeviewtasks}}
 
       <li class="task_item alert">
-        <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
+<p>yoyo</p>        <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
 
     {{#if editing}}
@@ -15,6 +15,8 @@
 {{else}}
 <div class="todo-item">       <p>{{description}}</p>  </div>
 {{/if}}
+
+{{> duration}}
 
 {{#if duedate}}
 <p style="">{{duedate}}</p><p class="dueclock">{{dueclock}}</p>
