--- a/client/review/nextactions/wips/timeview/timeview.html
+++ b/client/review/nextactions/wips/timeview/timeview.html
@@ -1,6 +1,11 @@
 <template name="timeview">
 
 <h3>Time View</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closecalendarsection">+</div>
+
+{{#unless previouscalendarhidden}}
+{{> previouscalendar}}
+{{/unless}}
+
   <ul id="task_list">
     {{#each timeviewtasks}}
     
