moving around wips, putting somedaymaybe contexts in with other somedaymaybes and starting on energy levels

--- a/client/review/nextactions/timeview/timeview.html
+++ b/client/review/nextactions/timeview/timeview.html
@@ -13,6 +13,12 @@
 
     {{/each}}
 
+    {{#unless calendaronly}}
+    {{#each timeviewtasks}}
+    {{> orgtask_todo_item}}
+    {{/each}}
+    {{/unless}}
+
     {{#each upcomingcalendartasks}}
     
     {{> calendartask}}
