minor css change

--- a/client/review/nextactions/timeview/timeview.html
+++ b/client/review/nextactions/timeview/timeview.html
@@ -22,7 +22,7 @@
     {{/with}}
     {{else}} {{#if reviewmodeenergylevelinboxonly}}
     {{#with timeviewtaskinbox}}
-    <span class="inboxmarker">{{> orgtask_todo_item}}</span>
+    {{> orgtask_todo_item}}
     {{/with}}
     {{/if}} <!-- reviewmodeenergylevel1 -->
     {{#if reviewmodeenergylevel1}}
