advancing the timeview

--- a/client/review/common/process/todo-item/todo-item.html
+++ b/client/review/common/process/todo-item/todo-item.html
@@ -1,5 +1,5 @@
 <template name="todo_item">
-      <li class="task_item alert">
+      <li class="inboxmarker task_item alert">
         <button type="button" class="close startprocessing-button" id="{{_id}}">x</button>
 
     {{#if editing}}
