the most embarrassing typographical error in history

--- a/client/review/nextactions/timeview/timeview.html
+++ b/client/review/nextactions/timeview/timeview.html
@@ -2,7 +2,7 @@
 
 <h3>Time View</h3><div style="float: left; position: relative; top: 15px; left: 5px;" class="btn btn-inverse closecalendarsection">+</div>
 <h6 style="float: left; clear: both;">Energy: {{> energyfilter}}</h6>
-<h6 style="float: left; clear: both;">Mode: <span class="btn reviewmode {{reviewmode}}">Definine Some Work</span><span class="btn domode {{domode}}">Do Defined Work</span></h6>
+<h6 style="float: left; clear: both;">Mode: <span class="btn reviewmode {{reviewmode}}">Define Some Work</span><span class="btn domode {{domode}}">Do Defined Work</span></h6>
 
 {{#unless previouscalendarhidden}}
 {{> previouscalendar}}
