defining duration and energy level for checklist items

--- a/client/common/easyhard/easyhard.html
+++ b/client/common/easyhard/easyhard.html
@@ -1,5 +1,6 @@
 <template name="easyhard">
 {{#if hasenergylevel}}
+<span>E: {{energylevel}} </span>
 {{#if hasenergylevelone}}
 <p class="sendtoenergytwo btn">Harder, More like a 2</p>
 {{else}} {{#if hasenergyleveloftwo}}
