--- a/client/nextactions/timeview/timeview.html
+++ b/client/nextactions/timeview/timeview.html
@@ -17,7 +17,7 @@
 
     {{#unless calendaronly}}
     {{#if domode}}
-    {{#with doingdefinedworktimeviewtask}}
+    {{#with dotask}}
     {{> orgtask_todo_item}}
     {{/with}}
     {{else}} {{#if reviewmodeenergylevelinboxonly}}
