--- a/client/common/easyhard/easyhard.html
+++ b/client/common/easyhard/easyhard.html
@@ -3,7 +3,7 @@
 <span>E: {{energylevel}} </span>
 {{#if hasenergylevelone}}
 <p class="sendtoenergytwo btn">Harder, More like a 2</p>
-{{else}} {{#if hasenergyleveloftwo}}
+{{else}} {{#if hasenergyleveltwo}}
 <p class="sendtoenergyone btn">Too Easy, More like a 1</p><p class="sendtoenergythree btn">Too Hard, More like a 3</p>
 {{else}} {{#if hasenergylevelsix}}
 <p class="sendtoenergyfive btn">Too Easy, More like a 5</p><p class="sendtoenergyseven btn">Too Hard, More like a 7</p>
