--- a/client/timeview/contextfilter/contextfilter.html
+++ b/client/timeview/contextfilter/contextfilter.html
@@ -1,4 +1,5 @@
 <template name="contextfilter">
+<h6 style="clear: both;">Contexts:</h6>
 <ul id="contextfilter" class="clearfix" style="margin: 0;">
 {{#each contextcategories}}
 {{#if hascontexts}}
