beginning to do preprocessing according to area of responsibility on inbox items

--- a/client/common/orgtask-todo-item/orgtask-todo-item.html
+++ b/client/common/orgtask-todo-item/orgtask-todo-item.html
@@ -40,6 +40,11 @@
 {{else}}
 <div class="todo-item">       <p>{{description}}</p> </div>
 {{/if}}
+
+{{#if is_firststageinboxitem}}
+{{> aorprocessor}}
+{{/if}}
+
     {{#if process}}
       <button type="button" style="float:right;" class="processing-button">process</button>
     {{/if}}
