some incomplete statistics on what's in the database

--- a/client/weeklyreview/statistics/statistics.html
+++ b/client/weeklyreview/statistics/statistics.html
@@ -5,7 +5,11 @@
 <p style="float: left; position: relative; top: 15px; left: 5px; clear: both;">Tasks in Taskspending: {{taskspendingcount}}</p>
 <p style="float: left; position: relative; top: 15px; left: 5px; clear: both;">Tasks in Inbox: {{inboxcount}}</p>
 <p style="float: left; position: relative; top: 15px; left: 5px; clear: both;">Tasks in Calendar: {{calendarcount}}</p>
+<p style="float: left; position: relative; top: 15px; left: 5px; clear: both;">Projectless Tasks in Calendar: {{projectlesscalendarcount}}</p>
+<p style="float: left; position: relative; top: 15px; left: 5px; clear: both;">Contextless Tasks in Calendar: {{contextlesscalendarcount}}</p>
+<p style="float: left; position: relative; top: 15px; left: 5px; clear: both;">Projectless & Contextless Tasks in Calendar: {{projectlesscontextlesscalendarcount}}</p>
 <p style="float: left; position: relative; top: 15px; left: 5px; clear: both;">Tasks w both Context and Project: {{contandprojcount}}</p>
-
-
+<p style="float: left; position: relative; top: 15px; left: 5px; clear: both;">Tasks w Context but not Project: {{contnotprojcount}}</p>
+<p style="float: left; position: relative; top: 15px; left: 5px; clear: both;">Tasks w Project but not Context: {{projnotcontcount}}</p>
+<p style="float: left; position: relative; top: 15px; left: 5px; clear: both;">Sum: {{sum}}</p>
 </template>
