demo time date picker

--- a/client/review.html
+++ b/client/review.html
@@ -6,6 +6,8 @@
     {{> checklisteditingdialog}}
     {{> alarmseteditingdialog}}
 
+{{> pikaday}}
+
 {{#if hasaorfocus}}
 <div style='text-align: center; z-index: 4; left: 30%; width: 20%; padding: 20px; position: fixed; background: blue; font-size: 2em'>{{aorfocus}}</div>
 {{/if}}
@@ -119,4 +121,8 @@
 
 {{/if}}
 
+</template>
+
+<template name="pikaday">
+  <input type="text" id="datepicker">
 </template>
