showing projects in the time view

--- a/client/timeview/profilter/profilter.html
+++ b/client/timeview/profilter/profilter.html
@@ -3,7 +3,7 @@
 <ul id="profilter" class="clearfix" style="margin: 0;">
 {{#if hasprojects}}
 {{#each projects}}
-<div class="btn {{projinboxcount}} profilter">{{project}}</div>
+<div class="btn {{profilterbuttonactive}} {{projinboxcount}} profilter">{{project}}</div>
 {{/each}}
 {{/if}}
 </ul>
