making clicking cycle through open projects

--- a/client/projects/focusprojectslist/focusprojectslist.html
+++ b/client/projects/focusprojectslist/focusprojectslist.html
@@ -4,15 +4,15 @@
     <ul id="focusproject_list" class="main-review">
       {{#each kickstarterlessprojects}}
 <div class="active-project {{nokickstart}}">
-          {{> project_item}}
-{{> openproject}}
+          {{> oldproject_item}}
+{{> oldopenproject}}
 
 </div> <!-- active project -->
       {{/each}}
       {{#each projects}}
 <div class="active-project">
-          {{> project_item}}
-{{> openproject}}
+          {{> oldproject_item}}
+{{> oldopenproject}}
 
 </div> <!-- active project -->
 
